--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.98MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.35MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-usa3-242, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
-  - {name: 🇨🇳 中国-454.2KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-617.5KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.05MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.66MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林) 2, server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.36MB/s(Youtube:不良林), server: 203.138.98.199, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇳 中国-1.71MB/s(Youtube:不良林), server: 116.129.254.65, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
+  - {name: 🇺🇸 美国-9.46MB/s(Youtube:不良林), server: az.az-bgp.chuangshi999.xyz, port: 64340, type: trojan, password: eae49aca-72e6-4465-a863-f5ab350997ef, sni: az.az-bgp.chuangshi999.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.60MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇸🇬 新加坡-1.80MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-310.2KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-345.8KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.09MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-652.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-617.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-454.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-617.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-454.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-617.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-454.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-617.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-454.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-617.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-454.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-617.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-454.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-617.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-454.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
