--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.65MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-usa3-242, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
-  - {name: 🇫🇷 法国-301.1KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-734.1KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-516.4KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-12.32MB/s(Youtube:不良林), server: az.az-bgp.chuangshi999.xyz, port: 64340, type: trojan, password: eae49aca-72e6-4465-a863-f5ab350997ef, sni: az.az-bgp.chuangshi999.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-617.5KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.01MB/s(Youtube:不良林), server: cs.bgp.liuliangzhuanfa.xyz, port: 33514, type: trojan, password: eae49aca-72e6-4465-a863-f5ab350997ef, sni: cs.bgp.liuliangzhuanfa.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.23MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.09MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-652.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.30MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-890.8KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-857.7KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-365.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-427.2KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-330.5KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-301.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-734.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-12.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-652.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-890.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-857.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-301.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-734.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-12.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-652.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-890.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-857.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-301.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-734.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-12.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-652.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-890.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-857.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-301.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-734.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-12.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-652.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-890.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-857.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-301.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-734.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-12.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-652.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-890.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-857.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-301.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-734.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-12.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-652.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-890.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-857.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-301.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-734.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-12.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-652.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-890.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-857.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
