--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-13.06MB/s(Youtube:不良林), server: az.az-bgp.chuangshi999.xyz, port: 64340, type: trojan, password: eae49aca-72e6-4465-a863-f5ab350997ef, sni: az.az-bgp.chuangshi999.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-427.2KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.34MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-868.7KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-3.63MB/s(Youtube:不良林), server: cs.bgp.liuliangzhuanfa.xyz, port: 33514, type: trojan, password: eae49aca-72e6-4465-a863-f5ab350997ef, sni: cs.bgp.liuliangzhuanfa.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: a.nmc168.ml, port: 52848, type: vmess, uuid: 6007d258-77fc-43b7-b0fe-63eab16ae430, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇬🇧 英国-1.88MB/s(Youtube:不良林), server: 185.105.191.227, port: 443, type: vmess, uuid: 248c42c7-5328-46f6-8473-7a7e7c0b3c39, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /f1hUi8k, ws-headers: {Host: 185.105.191.227}}
   - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇫🇷 法国-683.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-6.62MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-13.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-868.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇫🇷 法国-683.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-13.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-868.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇫🇷 法国-683.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-13.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-868.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇫🇷 法国-683.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-13.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-868.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇫🇷 法国-683.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-13.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-868.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇫🇷 法国-683.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-13.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-868.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇫🇷 法国-683.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-13.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-868.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇫🇷 法国-683.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
